Still figuring out how to advance runners
Need to change the onbase list - element zero should correspond to batter if batter is explicitly listed

--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -227,7 +227,51 @@
     "\n",
     "    return thisevent\n",
     "\n",
+    "def parse_baserunning(br):\n",
+    "        \n",
+    "    # parse baserunning info - successful advances get split by - and failed get split by X\n",
+    "    s = br.split('-')\n",
+    "    f = br.split('X')\n",
+    "\n",
+    "    for x in [s, f]:\n",
+    "        if (len(x) == 1):  # if split failed, then it just returns a 1-el list with the full text. Clear that out.\n",
+    "            x = ''\n",
+    "        else:\n",
+    "            for j in range(0,len(x)):\n",
+    "                try:\n",
+    "                    x[j] = int(x[j][0])     # if succeeded, convert string number to int\n",
+    "                except:\n",
+    "                    x[j] = 4  # replace non-letter values (e.g. H for home with 4)\n",
+    "                \n",
+    "    return s, f    # return newly-created success and failure lists\n",
+    "\n",
+    "\n",
     "def advance_runners(evnt, basers, oots, scr, teem):\n",
+    "    print('\\n')\n",
+    "\n",
+    "    print('Inning ',evnt['inning'],'; side ',side)\n",
+    "    print('on base before: ',basers)\n",
+    "    print('Batter: ',evnt['batterID'])\n",
+    "    print('Play type: ',evnt['play'][0])\n",
+    "    print('baserunning info: ',evnt['baserunning'])\n",
+    "    \n",
+    "    (success, failure) = parse_baserunning(evnt['baserunning'])\n",
+    "    print('Success matrix: ',success)\n",
+    "    print('Failure matrix: ', failure)\n",
+    "\n",
+    "    for i in range(0, len(failure)-1, 2):\n",
+    "        oots = oots + 1   # if a runner is out, increment the outs...\n",
+    "        basers[failure[0]-1] = ''  # and clear that base\n",
+    "        print('Outs are now ',oots)\n",
+    "      \n",
+    "    for i in range(0, len(success)-1, 2):\n",
+    "        if (success[i+1] == 4):   # if a runner gets to home...\n",
+    "            scr[side] = scr[side] + 1  # increment the score...\n",
+    "        else:\n",
+    "            basers[success[i+1]-1] = basers[success[0]-1]  # remember the -1 b/c onbase matrix starts at 0\n",
+    "        basers[success[i]-1] = ''      # either way, clear the base the runner started from\n",
+    "\n",
+    "        print('Scores are now ',scr)\n",
     "    \n",
     "    if (evnt['play'][0] in ('S', 'W', 'I')):\n",
     "        basers[0] = evnt['batterID']\n",
@@ -247,17 +291,17 @@
     "            print('H but not R or P')\n",
     "    else:\n",
     "        print('wtf')\n",
-    "    print(evnt['play'][0])\n",
-    "    print('on base: ',basers)\n",
-    "    print('baserunning info: ',evnt['baserunning'])\n",
     "#    print('score: ', sc)\n",
+    "    print('on base after: ',basers)\n",
+    "    print('---------------')\n",
+    "\n",
     "    return ''\n",
     "print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -267,87 +311,120 @@
      "output_type": "stream",
      "text": [
       "BAL201208060...\n",
-      "Inning  1\n",
-      "Side:  0\n",
-      "Side:  1\n",
-      "S\n",
-      "on base:  ['markn001', '', '']\n",
+      "\n",
+      "\n",
+      "Inning  1 ; side  1\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  markn001\n",
+      "Play type:  S\n",
       "baserunning info:  \n",
-      "D\n",
-      "on base:  ['markn001', 'jonea003', '']\n",
+      "Success matrix:  ['']\n",
+      "Failure matrix:  ['']\n",
+      "on base after:  ['markn001', '', '']\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  1 ; side  1\n",
+      "on base before:  ['markn001', '', '']\n",
+      "Batter:  jonea003\n",
+      "Play type:  D\n",
       "baserunning info:  1-3\n",
-      "Inning  2\n",
-      "Side:  0\n",
-      "Side:  1\n",
-      "S\n",
-      "on base:  ['fordl001', '', '']\n",
+      "Success matrix:  [1, 3]\n",
+      "Failure matrix:  ['1-3']\n",
+      "Scores are now  [0, 0]\n",
+      "on base after:  ['', 'jonea003', 'markn001']\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  2 ; side  1\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  fordl001\n",
+      "Play type:  S\n",
       "baserunning info:  \n",
-      "D\n",
-      "on base:  ['fordl001', 'reynm001', '']\n",
+      "Success matrix:  ['']\n",
+      "Failure matrix:  ['']\n",
+      "on base after:  ['fordl001', '', '']\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  2 ; side  1\n",
+      "on base before:  ['fordl001', '', '']\n",
+      "Batter:  reynm001\n",
+      "Play type:  D\n",
       "baserunning info:  1-H\n",
-      "HR\n",
-      "['fordl001', 'reynm001', '']\n",
-      "H\n",
-      "on base:  ['', '', '']\n",
+      "Success matrix:  [1, 4]\n",
+      "Failure matrix:  ['1-H']\n",
+      "Scores are now  [0, 1]\n",
+      "on base after:  ['', 'reynm001', '']\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  2 ; side  1\n",
+      "on base before:  ['', 'reynm001', '']\n",
+      "Batter:  markn001\n",
+      "Play type:  H\n",
       "baserunning info:  2-H\n",
-      "Inning  3\n",
-      "Side:  0\n",
-      "Side:  1\n",
-      "Inning  4\n",
-      "Side:  0\n",
-      "W\n",
-      "on base:  ['saunm001', '', '']\n",
+      "Success matrix:  [2, 4]\n",
+      "Failure matrix:  ['2-H']\n",
+      "Scores are now  [0, 2]\n",
+      "HR\n",
+      "['', '', '']\n",
+      "on base after:  ['', '', '']\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  4 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  saunm001\n",
+      "Play type:  W\n",
       "baserunning info:  \n",
-      "Side:  1\n",
-      "S\n",
-      "on base:  ['reynm001', '', '']\n",
+      "Success matrix:  ['']\n",
+      "Failure matrix:  ['']\n",
+      "on base after:  ['saunm001', '', '']\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  4 ; side  1\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  reynm001\n",
+      "Play type:  S\n",
       "baserunning info:  \n",
-      "Inning  5\n",
-      "Side:  0\n",
-      "S\n",
-      "on base:  ['carpm001', '', '']\n",
+      "Success matrix:  ['']\n",
+      "Failure matrix:  ['']\n",
+      "on base after:  ['reynm001', '', '']\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  5 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  carpm001\n",
+      "Play type:  S\n",
       "baserunning info:  \n",
-      "Side:  1\n",
-      "Inning  6\n",
-      "Side:  0\n",
-      "S\n",
-      "on base:  ['kawam001', '', '']\n",
+      "Success matrix:  ['']\n",
+      "Failure matrix:  ['']\n",
+      "on base after:  ['carpm001', '', '']\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  6 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  kawam001\n",
+      "Play type:  S\n",
       "baserunning info:  B-2(E4/TH1)\n",
-      "Side:  1\n",
-      "Inning  7\n",
-      "Side:  0\n",
-      "S\n",
-      "on base:  ['jasoj001', '', '']\n",
-      "baserunning info:  \n",
-      "Side:  1\n",
-      "D\n",
-      "on base:  ['', 'reynm001', '']\n",
-      "baserunning info:  \n",
-      "Inning  8\n",
-      "Side:  0\n",
-      "D\n",
-      "on base:  ['', 'thame001', '']\n",
-      "baserunning info:  \n",
-      "S\n",
-      "on base:  ['kawam001', 'thame001', '']\n",
-      "baserunning info:  2-H;BX2(836)\n",
-      "W\n",
-      "on base:  ['ackld001', 'thame001', '']\n",
-      "baserunning info:  \n",
-      "Side:  1\n",
-      "D\n",
-      "on base:  ['', 'hardj003', '']\n",
-      "baserunning info:  \n",
-      "Inning  9\n",
-      "Side:  0\n",
-      "S\n",
-      "on base:  ['seagk001', '', '']\n",
-      "baserunning info:  \n",
-      "S\n",
-      "on base:  ['wellc001', '', '']\n",
-      "baserunning info:  2-3\n",
-      "Side:  1\n",
-      "[0, 3]\n"
+      "Success matrix:  [4, 2]\n",
+      "Failure matrix:  ['B-2(E4/TH1)']\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-37-23a26d616f6c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     62\u001b[0m                         \u001b[0mnOuts\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m                         \u001b[0mscore\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 64\u001b[1;33m                         side)\n\u001b[0m\u001b[0;32m     65\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-36-89e30c3694a2>\u001b[0m in \u001b[0;36madvance_runners\u001b[1;34m(evnt, basers, oots, scr, teem)\u001b[0m\n\u001b[0;32m    125\u001b[0m             \u001b[0mscr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mside\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mside\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m  \u001b[1;31m# increment the score...\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    126\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 127\u001b[1;33m             \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m# remember the -1 b/c onbase matrix starts at 0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    128\u001b[0m         \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m      \u001b[1;31m# either way, clear the base the runner started from\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    129\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -373,9 +450,7 @@
     "    score = [0,0] # score as [vis, home] starts at [0,0]\n",
     "\n",
     "    for ing in thisgame_df['inning'].drop_duplicates():\n",
-    "        print('Inning ',ing)\n",
     "        for side in range(0,2):                           # iter through each half-inning\n",
-    "            print('Side: ',side)\n",
     "            halfinn = thisgame_df[                      # get all events in this half-inning\n",
     "                (thisgame_df['inning'] == ing) & \n",
     "                (thisgame_df['home_or_visitor'] == side)]\n",
@@ -410,7 +485,7 @@
     "                if (re.match(r'[0-9K]+',thisevent['play'])):\n",
     "                    nOuts = nOuts + 1\n",
     "\n",
-    "                # If the play is a hit, advance baserunners\n",
+    "                # If the play is a hit, advance baserunners with fcn advance_runners(evnt, basers, oots, scr, teem):\n",
     "                if (re.match(r'[S|D|T|H|W|I]',thisevent['play'])):\n",
     "                    advance_runners(\n",
     "                        thisevent,\n",
@@ -418,6 +493,7 @@
     "                        nOuts,\n",
     "                        score,\n",
     "                        side)\n",
+    "                \n",
     "\n",
     "                # update info based on the play that has occurred\n",
     "                thisevent['outs'] = nOuts\n",
