--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -227,52 +227,51 @@
     "\n",
     "    return thisevent\n",
     "\n",
-    "def parse_baserunning(br):\n",
-    "        \n",
-    "    # parse baserunning info - successful advances get split by - and failed get split by X\n",
-    "    s = br.split('-')\n",
-    "    f = br.split('X')\n",
     "\n",
-    "    for x in [s, f]:\n",
-    "        if (len(x) == 1):  # if split failed, then it just returns a 1-el list with the full text. Clear that out.\n",
-    "            x = ''\n",
-    "        else:\n",
-    "            for j in range(0,len(x)):\n",
-    "                try:\n",
-    "                    x[j] = int(x[j][0])     # if succeeded, convert string number to int\n",
-    "                except:\n",
-    "                    x[j] = 4  # replace non-letter values (e.g. H for home with 4)\n",
-    "                \n",
-    "    return s, f    # return newly-created success and failure lists\n",
-    "\n",
-    "\n",
-    "def advance_runners(evnt, basers, oots, scr, teem):\n",
+    "def advance_runners(evnt, basers, oots, scr, teem):     # basers is now a 4x2 np array\n",
     "    print('\\n')\n",
     "\n",
-    "    print('Inning ',evnt['inning'],'; side ',side)\n",
-    "    print('on base before: ',basers)\n",
-    "    print('Batter: ',evnt['batterID'])\n",
-    "    print('Play type: ',evnt['play'][0])\n",
-    "    print('baserunning info: ',evnt['baserunning'])\n",
-    "    \n",
-    "    (success, failure) = parse_baserunning(evnt['baserunning'])\n",
-    "    print('Success matrix: ',success)\n",
-    "    print('Failure matrix: ', failure)\n",
+    "    print('Inning ', evnt['inning'],'; side ', side)\n",
+    "#    print('on base before: ', basers)\n",
+    "#    print('Batter: ', evnt['batterID'])\n",
+    "    print('Play type: ', evnt['play'][0])\n",
+    "    print('baserunning info: ', evnt['baserunning'])\n",
     "\n",
-    "    for i in range(0, len(failure)-1, 2):\n",
-    "        oots = oots + 1   # if a runner is out, increment the outs...\n",
-    "        basers[failure[0]-1] = ''  # and clear that base\n",
-    "        print('Outs are now ',oots)\n",
-    "      \n",
-    "    for i in range(0, len(success)-1, 2):\n",
-    "        if (success[i+1] == 4):   # if a runner gets to home...\n",
-    "            scr[side] = scr[side] + 1  # increment the score...\n",
-    "        else:\n",
-    "            basers[success[i+1]-1] = basers[success[0]-1]  # remember the -1 b/c onbase matrix starts at 0\n",
-    "        basers[success[i]-1] = ''      # either way, clear the base the runner started from\n",
+    "    # If there is baserunning info provided, obey it\n",
+    "    if (evnt['baserunning'] != ''):\n",
+    "        # If there are multiple baserunning events, split them around ;\n",
+    "        x = evnt['baserunning'].split(';')\n",
+    "        \n",
+    "        success = []\n",
+    "        failure = []\n",
+    "        \n",
+    "        for i in range(0, len(x)):\n",
+    "            if ('-' in x[i]):\n",
+    "                success.append([x[i].split('-')[0], x[i].split('-')[1][0], x[i].split('-')[1][1:]])\n",
+    "            if ('X' in x[i]):\n",
+    "                failure.append([x[i].split('X')[0], x[i].split('X')[1][0], x[i].split('X')[1][1:]])\n",
+    "        \n",
+    "        for u in (success, failure):\n",
+    "            for j in range(0, len(u)):\n",
+    "                if (u[j][0] == 'B'):\n",
+    "                    u[j][0] = 0\n",
+    "                if (u[j][1] == 'H'):\n",
+    "                    u[j][1] = 4\n",
+    "                for k in range(0,1):\n",
+    "                    u[j][k] = int(u[j][k])\n",
+    "        \n",
+    "        for y in range(0, len(failure)):\n",
+    "            oots = oots + 1\n",
+    "            basers[failure[y][1]] = ''\n",
+    "            evnt['comment'] += failure[y][2]\n",
     "\n",
-    "        print('Scores are now ',scr)\n",
-    "    \n",
+    "        for z in range(0, len(success)):\n",
+    "            if (success[z][1] == 4):\n",
+    "                scr[side] = scr[side] + 1\n",
+    "            basers[success[z][1]] = basers[success[z][0]]\n",
+    "            basers[success[z][0]] = ''\n",
+    "            evnt['comment'] += success[z][2]\n",
+    "        \n",
     "    if (evnt['play'][0] in ('S', 'W', 'I')):\n",
     "        basers[0] = evnt['batterID']\n",
     "    elif (evnt['play'][0] == 'D'):\n",
@@ -286,13 +285,13 @@
     "            scr[teem] = sum((x != '') for x in basers) + 1  # all on base score, so does batter\n",
     "            basers = ['', '', '']   # and the bases are empty again\n",
     "        elif (evnt['play'][1] == 'P'):\n",
-    "            basers[0] = evnt['batterID']\n",
+    "            basers[1] = evnt['batterID']\n",
     "        else:\n",
     "            print('H but not R or P')\n",
     "    else:\n",
     "        print('wtf')\n",
     "#    print('score: ', sc)\n",
-    "    print('on base after: ',basers)\n",
+    "#    print('on base after: ',basers)\n",
     "    print('---------------')\n",
     "\n",
     "    return ''\n",
@@ -301,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -314,117 +313,26 @@
       "\n",
       "\n",
       "Inning  1 ; side  1\n",
-      "on base before:  ['', '', '']\n",
-      "Batter:  markn001\n",
       "Play type:  S\n",
       "baserunning info:  \n",
-      "Success matrix:  ['']\n",
-      "Failure matrix:  ['']\n",
-      "on base after:  ['markn001', '', '']\n",
       "---------------\n",
       "\n",
       "\n",
       "Inning  1 ; side  1\n",
-      "on base before:  ['markn001', '', '']\n",
-      "Batter:  jonea003\n",
       "Play type:  D\n",
-      "baserunning info:  1-3\n",
-      "Success matrix:  [1, 3]\n",
-      "Failure matrix:  ['1-3']\n",
-      "Scores are now  [0, 0]\n",
-      "on base after:  ['', 'jonea003', 'markn001']\n",
-      "---------------\n",
-      "\n",
-      "\n",
-      "Inning  2 ; side  1\n",
-      "on base before:  ['', '', '']\n",
-      "Batter:  fordl001\n",
-      "Play type:  S\n",
-      "baserunning info:  \n",
-      "Success matrix:  ['']\n",
-      "Failure matrix:  ['']\n",
-      "on base after:  ['fordl001', '', '']\n",
-      "---------------\n",
-      "\n",
-      "\n",
-      "Inning  2 ; side  1\n",
-      "on base before:  ['fordl001', '', '']\n",
-      "Batter:  reynm001\n",
-      "Play type:  D\n",
-      "baserunning info:  1-H\n",
-      "Success matrix:  [1, 4]\n",
-      "Failure matrix:  ['1-H']\n",
-      "Scores are now  [0, 1]\n",
-      "on base after:  ['', 'reynm001', '']\n",
-      "---------------\n",
-      "\n",
-      "\n",
-      "Inning  2 ; side  1\n",
-      "on base before:  ['', 'reynm001', '']\n",
-      "Batter:  markn001\n",
-      "Play type:  H\n",
-      "baserunning info:  2-H\n",
-      "Success matrix:  [2, 4]\n",
-      "Failure matrix:  ['2-H']\n",
-      "Scores are now  [0, 2]\n",
-      "HR\n",
-      "['', '', '']\n",
-      "on base after:  ['', '', '']\n",
-      "---------------\n",
-      "\n",
-      "\n",
-      "Inning  4 ; side  0\n",
-      "on base before:  ['', '', '']\n",
-      "Batter:  saunm001\n",
-      "Play type:  W\n",
-      "baserunning info:  \n",
-      "Success matrix:  ['']\n",
-      "Failure matrix:  ['']\n",
-      "on base after:  ['saunm001', '', '']\n",
-      "---------------\n",
-      "\n",
-      "\n",
-      "Inning  4 ; side  1\n",
-      "on base before:  ['', '', '']\n",
-      "Batter:  reynm001\n",
-      "Play type:  S\n",
-      "baserunning info:  \n",
-      "Success matrix:  ['']\n",
-      "Failure matrix:  ['']\n",
-      "on base after:  ['reynm001', '', '']\n",
-      "---------------\n",
-      "\n",
-      "\n",
-      "Inning  5 ; side  0\n",
-      "on base before:  ['', '', '']\n",
-      "Batter:  carpm001\n",
-      "Play type:  S\n",
-      "baserunning info:  \n",
-      "Success matrix:  ['']\n",
-      "Failure matrix:  ['']\n",
-      "on base after:  ['carpm001', '', '']\n",
-      "---------------\n",
-      "\n",
-      "\n",
-      "Inning  6 ; side  0\n",
-      "on base before:  ['', '', '']\n",
-      "Batter:  kawam001\n",
-      "Play type:  S\n",
-      "baserunning info:  B-2(E4/TH1)\n",
-      "Success matrix:  [4, 2]\n",
-      "Failure matrix:  ['B-2(E4/TH1)']\n"
+      "baserunning info:  1-3\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0mTraceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-37-23a26d616f6c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     62\u001b[0m                         \u001b[0mnOuts\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m                         \u001b[0mscore\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 64\u001b[1;33m                         side)\n\u001b[0m\u001b[0;32m     65\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-36-89e30c3694a2>\u001b[0m in \u001b[0;36madvance_runners\u001b[1;34m(evnt, basers, oots, scr, teem)\u001b[0m\n\u001b[0;32m    125\u001b[0m             \u001b[0mscr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mside\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mside\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m  \u001b[1;31m# increment the score...\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    126\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 127\u001b[1;33m             \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m# remember the -1 b/c onbase matrix starts at 0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    128\u001b[0m         \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m      \u001b[1;31m# either way, clear the base the runner started from\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    129\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[1;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-96-71115d392c96>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     63\u001b[0m                         \u001b[0mnOuts\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m                         \u001b[0mscore\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m                         side)\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-95-e400c46f206d>\u001b[0m in \u001b[0;36madvance_runners\u001b[1;34m(evnt, basers, oots, scr, teem)\u001b[0m\n\u001b[0;32m    125\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    126\u001b[0m                 \u001b[0mscr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mside\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mside\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 127\u001b[1;33m             \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    128\u001b[0m             \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    129\u001b[0m             \u001b[0mevnt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'comment'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
      ]
     }
    ],
@@ -454,7 +362,8 @@
     "            halfinn = thisgame_df[                      # get all events in this half-inning\n",
     "                (thisgame_df['inning'] == ing) & \n",
     "                (thisgame_df['home_or_visitor'] == side)]\n",
-    "            onbase = ['','','']  # at start of half-inning, no one is on base...\n",
+    "            onbase = ['', '', '']\n",
+    "#            onbase = numpy.empty((4,2), dtype=object)\n",
     "            nOuts = 0            #     and there are no outs\n",
     "            fieldingflag = 1 - side  # flag: makes fielding team the opposite of batting team\n",
     "\n",
