Got hitting-created baserunning handled, maybe?
But still need to handle stolen bases, wild pitches, etc.

--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -231,9 +231,9 @@
     "def advance_runners(evnt, basers, oots, scr, teem):     # basers is now a 4x2 np array\n",
     "    print('\\n')\n",
     "\n",
-    "    print('Inning ', evnt['inning'],'; side ', side)\n",
-    "#    print('on base before: ', basers)\n",
-    "#    print('Batter: ', evnt['batterID'])\n",
+    "    print('Inning ', evnt['inning'],'; side ', teem)\n",
+    "    print('on base before: ', basers)\n",
+    "    print('Batter: ', evnt['batterID'])\n",
     "    print('Play type: ', evnt['play'][0])\n",
     "    print('baserunning info: ', evnt['baserunning'])\n",
     "\n",
@@ -257,32 +257,41 @@
     "                    u[j][0] = 0\n",
     "                if (u[j][1] == 'H'):\n",
     "                    u[j][1] = 4\n",
-    "                for k in range(0,1):\n",
+    "                for k in range(0,2):\n",
     "                    u[j][k] = int(u[j][k])\n",
     "        \n",
     "        for y in range(0, len(failure)):\n",
     "            oots = oots + 1\n",
-    "            basers[failure[y][1]] = ''\n",
-    "            evnt['comment'] += failure[y][2]\n",
+    "#            print('Now {0:.0f} outs'.format(oots))\n",
+    "#            print('failure[y]: ',failure[y])\n",
+    "            basers[failure[y][1]-1] = ''\n",
+    "#            evnt['comment'] += failure[y][2]\n",
     "\n",
     "        for z in range(0, len(success)):\n",
+    "#            print('success[z]: ',success[z])\n",
     "            if (success[z][1] == 4):\n",
-    "                scr[side] = scr[side] + 1\n",
-    "            basers[success[z][1]] = basers[success[z][0]]\n",
-    "            basers[success[z][0]] = ''\n",
+    "                scr[teem] = scr[teem] + 1\n",
+    "#                print('Score now {0:.0f} - {1:.0f}.'.format(scr[0], scr[1]))\n",
+    "\n",
+    "            else:\n",
+    "                basers[success[z][1]-1] = basers[success[z][0]-1]\n",
+    "            basers[success[z][0]-1] = ''\n",
     "            evnt['comment'] += success[z][2]\n",
-    "        \n",
+    "\n",
+    "    # After baserunners have been advanced as needed, advance the batter too.\n",
     "    if (evnt['play'][0] in ('S', 'W', 'I')):\n",
-    "        basers[0] = evnt['batterID']\n",
+    "        if ('BX' not in evnt['baserunning']):\n",
+    "            basers[0] = evnt['batterID']\n",
     "    elif (evnt['play'][0] == 'D'):\n",
-    "        basers[1] = evnt['batterID']\n",
+    "        if ('BX' not in evnt['baserunning']):\n",
+    "            basers[1] = evnt['batterID']\n",
     "    elif (evnt['play'][0] == 'T'):\n",
-    "        basers[2] = evnt['batterID']\n",
+    "        if ('BX' not in evnt['baserunning']):\n",
+    "            basers[2] = evnt['batterID']\n",
     "    elif (evnt['play'][0] == 'H'):\n",
     "        if (evnt['play'][1] == 'R'):\n",
-    "            print('HR')\n",
-    "            print(basers)\n",
-    "            scr[teem] = sum((x != '') for x in basers) + 1  # all on base score, so does batter\n",
+    "            scr[teem] = scr[teem] + 1  # only need to account for the batter\n",
+    "#            scr[teem] = sum((x != '') for x in basers) + 1  # all on base score, so does batter\n",
     "            basers = ['', '', '']   # and the bases are empty again\n",
     "        elif (evnt['play'][1] == 'P'):\n",
     "            basers[1] = evnt['batterID']\n",
@@ -290,8 +299,8 @@
     "            print('H but not R or P')\n",
     "    else:\n",
     "        print('wtf')\n",
-    "#    print('score: ', sc)\n",
-    "#    print('on base after: ',basers)\n",
+    "    print('on base after: ',basers)\n",
+    "    print('Score: ',scr)\n",
     "    print('---------------')\n",
     "\n",
     "    return ''\n",
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -313,26 +322,174 @@
       "\n",
       "\n",
       "Inning  1 ; side  1\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  markn001\n",
       "Play type:  S\n",
       "baserunning info:  \n",
+      "on base after:  ['markn001', '', '']\n",
+      "Score:  [0, 0]\n",
       "---------------\n",
       "\n",
       "\n",
       "Inning  1 ; side  1\n",
+      "on base before:  ['markn001', '', '']\n",
+      "Batter:  jonea003\n",
       "Play type:  D\n",
-      "baserunning info:  1-3\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-96-71115d392c96>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     63\u001b[0m                         \u001b[0mnOuts\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m                         \u001b[0mscore\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m                         side)\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-95-e400c46f206d>\u001b[0m in \u001b[0;36madvance_runners\u001b[1;34m(evnt, basers, oots, scr, teem)\u001b[0m\n\u001b[0;32m    125\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    126\u001b[0m                 \u001b[0mscr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mside\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mside\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 127\u001b[1;33m             \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    128\u001b[0m             \u001b[0mbasers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    129\u001b[0m             \u001b[0mevnt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'comment'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0msuccess\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+      "baserunning info:  1-3\n",
+      "on base after:  ['', 'jonea003', 'markn001']\n",
+      "Score:  [0, 0]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  2 ; side  1\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  fordl001\n",
+      "Play type:  S\n",
+      "baserunning info:  \n",
+      "on base after:  ['fordl001', '', '']\n",
+      "Score:  [0, 0]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  2 ; side  1\n",
+      "on base before:  ['fordl001', '', '']\n",
+      "Batter:  reynm001\n",
+      "Play type:  D\n",
+      "baserunning info:  1-H\n",
+      "on base after:  ['', 'reynm001', '']\n",
+      "Score:  [0, 1]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  2 ; side  1\n",
+      "on base before:  ['', 'reynm001', '']\n",
+      "Batter:  markn001\n",
+      "Play type:  H\n",
+      "baserunning info:  2-H\n",
+      "on base after:  ['', '', '']\n",
+      "Score:  [0, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  4 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  saunm001\n",
+      "Play type:  W\n",
+      "baserunning info:  \n",
+      "on base after:  ['saunm001', '', '']\n",
+      "Score:  [0, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  4 ; side  1\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  reynm001\n",
+      "Play type:  S\n",
+      "baserunning info:  \n",
+      "on base after:  ['reynm001', '', '']\n",
+      "Score:  [0, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  5 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  carpm001\n",
+      "Play type:  S\n",
+      "baserunning info:  \n",
+      "on base after:  ['carpm001', '', '']\n",
+      "Score:  [0, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  6 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  kawam001\n",
+      "Play type:  S\n",
+      "baserunning info:  B-2(E4/TH1)\n",
+      "on base after:  ['kawam001', '', '']\n",
+      "Score:  [0, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  7 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  jasoj001\n",
+      "Play type:  S\n",
+      "baserunning info:  \n",
+      "on base after:  ['jasoj001', '', '']\n",
+      "Score:  [0, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  7 ; side  1\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  reynm001\n",
+      "Play type:  D\n",
+      "baserunning info:  \n",
+      "on base after:  ['', 'reynm001', '']\n",
+      "Score:  [0, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  8 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  thame001\n",
+      "Play type:  D\n",
+      "baserunning info:  \n",
+      "on base after:  ['', 'thame001', '']\n",
+      "Score:  [0, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  8 ; side  0\n",
+      "on base before:  ['', 'thame001', '']\n",
+      "Batter:  kawam001\n",
+      "Play type:  S\n",
+      "baserunning info:  2-H;BX2(836)\n",
+      "on base after:  ['', '', '']\n",
+      "Score:  [1, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  8 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  ackld001\n",
+      "Play type:  W\n",
+      "baserunning info:  \n",
+      "on base after:  ['ackld001', '', '']\n",
+      "Score:  [1, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  8 ; side  1\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  hardj003\n",
+      "Play type:  D\n",
+      "baserunning info:  \n",
+      "on base after:  ['', 'hardj003', '']\n",
+      "Score:  [1, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  9 ; side  0\n",
+      "on base before:  ['', '', '']\n",
+      "Batter:  seagk001\n",
+      "Play type:  S\n",
+      "baserunning info:  \n",
+      "on base after:  ['seagk001', '', '']\n",
+      "Score:  [1, 3]\n",
+      "---------------\n",
+      "\n",
+      "\n",
+      "Inning  9 ; side  0\n",
+      "on base before:  ['seagk001', '', '']\n",
+      "Batter:  wellc001\n",
+      "Play type:  S\n",
+      "baserunning info:  2-3\n",
+      "on base after:  ['wellc001', '', '']\n",
+      "Score:  [1, 3]\n",
+      "---------------\n",
+      "[1, 3]\n"
      ]
     }
    ],
